# deeplearning3.0

./: .gitignore  PROJECT_STATUS.md  README.md  pyproject.toml
configs/: descriptor_clusters.example.yaml  duration_rules.example.csv  experiment.example.yaml  field_mapping.ecotox_clean.yaml  field_mapping.example.yaml
docs/: config_schema.md  database_profile.md  database_schema_scan.md  modeling_table_build_report.md  technical_blueprint.md
qsar_tl/: __init__.py  cli.py  config.py
qsar_tl/data/: __init__.py  aggregation.py  duration.py  field_mapping.py  modeling_tables.py  sqlite_scan.py  target_builder.py  task_mapping.py  task_tables.py
qsar_tl/evaluation/: __init__.py  metrics.py  reporting.py  splits.py
qsar_tl/features/: __init__.py  molecule.py  species.py
qsar_tl/gui/: __init__.py  app.py  job_model.py  process_runner.py  widgets.py
qsar_tl/modeling/: __init__.py  dataset.py  losses.py  network.py  preprocessing.py  task_registry.py
qsar_tl/training/: __init__.py  baseline.py  deep_train.py  runner.py  train.py
scripts/: build_modeling_tables.py  build_task_tables.py  profile_ecotox_clean.py  run_baseline.py  scan_sqlite_schema.py
tests/: test_gui_models.py  test_modeling_shapes.py  test_splits.py  test_task_mapping.py
