[project]
name = "ecotox-qsar-transfer"
version = "0.1.0"
description = "ECOTOX QSAR transfer learning workflow"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "PySide6>=6.7",
]

[project.optional-dependencies]
chem = ["rdkit>=2023.9"]
ml = ["torch>=2.2", "shap>=0.45"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qsar_tl*"]

